2008-08-29  Bastien Nocera  <hadess@hadess.net>

	* index.html: Add FAQ mentioned by Fred Crozat (Closes: #432546)

2008-04-17  Philip Withnall  <pwithnall@svn.gnome.org>

	* index.html: Fixed spelling error. (Closes: #524698)

2008-04-14  Philip Withnall  <pwithnall@svn.gnome.org>

	* index.html: Add information about the YouTube plugin, update some
	information and fix some HTML errors. Additionally, update the
	copyright dates. (Closes: #527189)

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* index.html: Fix typo

2008-02-11  Bastien Nocera  <hadess@hadess.net>

	* index.html: Add section about DVB playback

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* index.html: Update web page to mention which
	plugins are needed for DVD playback (Closes: #478965)

2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* index.html: Update sponsor statuses

2007-08-13  Bastien Nocera  <hadess@hadess.net>

	* index.html: Remove stray characters

2007-08-12  Bastien Nocera  <hadess@hadess.net>

	* index.html: Link to FAQs about installing Totem with
	restricted codecs

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* index.html: add an FAQ about the browser plugin
	advertising unsupported mime-types

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* index.html: Add some GStreamer debugging options

2007-01-03  Bastien Nocera  <hadess@hadess.net>

	* index.html: update GNOME Subtitles' address
	(Closes: #390162)

2006-12-07  Bastien Nocera  <hadess@hadess.net>

	* index.html: add 2 FAQs to the list

2006-11-01  Bastien Nocera  <hadess@hadess.net>

	* index.html: point to fedoraproject.org for the Fedora link,
	mention Tim in the sponsors, Totem is "totem" in Fedora, not
	totem-gstreamer (Closes: #368621)

2006-09-10  Bastien Nocera  <hadess@hadess.net>

	* index.html: add a link to GSubtitle

2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* index.html: Fix install instructions for Gentoo (Closes: #340948)

2006-04-13  Bastien Nocera  <hadess@hadess.net>
