@@ -23,8 +23,7 @@
 
 <h1>What is Totem?</h1>
 <p>Totem is the official movie player of the <a href="http://www.gnome.org/">GNOME</a>
-desktop environment based on <a href="http://xinehq.de">xine-lib</a> or
-<a href="http://gstreamer.freedesktop.org/">GStreamer</a>. It features a
+desktop environment based on <a href="http://gstreamer.freedesktop.org/">GStreamer</a>. It features a
 playlist, a full-screen mode, seek and volume controls, as well as keyboard
 navigation.<br />
 It comes with added functionality such as:</p>
@@ -42,7 +41,6 @@ It comes with added functionality such as:</p>
 
 <p>If you are running a recent distribution, there is a high chance totem is already installed since it is the default movie player of the <a href="http://www.gnome.org/">GNOME</a> desktop environment.
 If this isn't the case, you can install it by using a online repository
-(if available for your distribution). You can choose between <tt>totem-gstreamer</tt> and <tt>totem-xine</tt>.</p>
 
 <p>For deb-based distributions (like <a href="http://www.debian.org/">Debian</a>, <a href="http://www.ubuntu.com">Ubuntu</a>, &hellip;) this is:</p>
 <div class="command">$ sudo apt-get install totem-gstreamer</div>
@@ -64,7 +62,7 @@ that is related to yours, or you can compile totem from source (see <a href="#in
 <ul>
 <li><a href="http://packages.debian.org/unstable/gnome/totem.html">Debian</a></li>
 <li><a href="https://help.ubuntu.com/community/RestrictedFormats">Ubuntu</a></li>
-<li><a href="http://www.fedorafaq.org/#dvd">Fedora RPMs (xine-lib)</a> and <a href="http://www.fedorafaq.org/#mp3">Fedora RPMs (GStreamer)</a></li>
+<li><a href="http://www.fedorafaq.org/#mp3">Fedora RPMs (GStreamer)</a></li>
 <li><a href="http://rpmfind.net/linux/rpm2html/search.php?query=totem&amp;submit=Search+...">Rpmfind search for totem</a></li>
 </ul>
 
@@ -83,7 +81,7 @@ Note that SVN versions can be unstable! Check out the <a href="http://live.gnome
 <h1>What are the minimum requirements?</h1>
 <ul>
   <li><a href="http://www.gnome.org/">GNOME</a> 2.10</li>
-  <li><a href="http://gstreamer.freedesktop.org/">GStreamer</a> 0.10.12 (with GStreamer-plugins 0.10.12) or <a href="http://xinehq.de/">xine-lib</a> 1.1.7</li>
+  <li><a href="http://gstreamer.freedesktop.org/">GStreamer</a> 0.10.12 (with GStreamer-plugins 0.10.12)</li>
   <li><a href="http://www.home.unix-ag.org/simon/gromit/">Gromit</a> 20041213 for the Telestrator mode</li>
   <li><a href="http://developers.videolan.org/libdvdcss/">libdvdcss</a> for DVD playback (<a href="http://freshrpms.net/rpm/libdvdcss">Fedora Core</a>, <a href="https://help.ubuntu.com/community/RestrictedFormats/PlayingDVDs">Ubuntu</a>)</li>
 </ul>
@@ -91,7 +89,7 @@ Note that SVN versions can be unstable! Check out the <a href="http://live.gnome
 <a name="features"></a>
 <h1>Features</h1>
 <ul>
-<li>Play any <a href="http://xinehq.de/">xine</a>- or <a href="http://gstreamer.freedesktop.org/">GStreamer</a>-supported file (depending on the backend chosen)</li>
+<li>Play any <a href="http://gstreamer.freedesktop.org/">GStreamer</a>-supported file</li>
 <li><a href="http://www.lirc.org">LIRC</a> support</li>
 <li>Shoutcast, m3u, asx, SMIL and ra playlists support (also usable from a shipped LGPL library)</li>
 <li>DVD (with menus), VCD playback, disc-type automatically detected</li>
@@ -150,11 +148,6 @@ can be found <a href="http://gstreamer.freedesktop.org/documentation/splitup.htm
   <li><b><a href="http://ronald.bitfreak.net/pitfdll.php">Pitfdll</a></b><br />Plug-ins using the Windows codec DLLs for which no free software implementation exists yet.</li>
 </ul>
 
-<h2>xine-lib</h2>
-<p>Everything's included in this version, apart from some proprietary codecs that
-require Windows DLLs. Check the <a href="http://xinehq.de/index.php/faq#QUICKTIME">FAQ</a> on
-xine-lib's website. That should sort most of you out.</p>
-
 <a name="dvb"></a>
 <h1>DVB support</h1>
 <p>Using Totem, you can watch TV on over-the-air and satellite digital television. You'll need a DVB-T or DVB-S card supported by Linux, and a channels.conf file containing the channel tuning information.</p>
@@ -162,16 +155,14 @@ xine-lib's website. That should sort most of you out.</p>
 <h2>GStreamer</h2>
 <p>You will need gst-plugins-bad 0.10.6, as well as Fluendo's MPEG demuxer to have playback working. The channels.conf file should be named <tt>~/.gstreamer-0.10/dvb-channels.conf</tt>.</p>
 
-<h2>xine-lib</h2>
-<p>The channels.conf file should be placed in <tt>~/.xine/</tt>.</p>
-
 <h2>Generating the channels.conf</h2>
 <p><a href="http://bugzilla.gnome.org/show_bug.cgi?id=515759">Work is on-going to have a scanner interface in Totem</a>, so that the out-of-the-box experience is better, but you will have to use another application to generate the channels listing.</p>
 <p>We recommend you use <a href="http://www.edafe.org/vdr/wscan.html">w_scan</a> as it doesn't require any initial scanning data to scan for channels.</p>
+<p>Note that you will need to generate the file in xine format.</p>
 
 <a name="youtube"></a>
 <h1>YouTube support</h1>
-<p>With the YouTube plugin you can browse <a href="http://youtube.com/">YouTube</a> and watch videos from it. You'll need gstreamer-plugins-bad 0.10.6 or a recent version of xine-lib. Even if videos play correctly, seeking may not yet work for them but work is ongoing to fix this.</p>
+<p>With the YouTube plugin you can browse <a href="http://youtube.com/">YouTube</a> and watch videos from it. You'll need gstreamer-plugins-bad 0.10.6. Even if videos play correctly, seeking may not yet work for them but work is ongoing to fix this.</p>
 
 <a name="faq"></a>
 <h1>Frequently Asked Questions</h1>
@@ -202,7 +193,7 @@ A: You will either need gnome-screensaver <b>and</b> gnome-power-manager running
 <p>
 Before you want to file a bug, make sure you are running the latest version.
 After that, you must find out if the bug is caused by totem or by its backend
-(GStreamer or xine). If it is something visual in the video or something in the
+(GStreamer). If it is something visual in the video or something in the
 audio, it probably is a bug in the backend and has to be submitted to the right
 bugtracker. To see what backend you are using check the "About box" of totem.</p>
 
@@ -217,11 +208,6 @@ You might want to include the output of this command to your bug report:</p>
 <p>or if the problem seems to be with the file you're playing, include the output of:</p>
 <div class="command">gst-launch-0.10 playbin uri=&lt;location of the file&gt;</div>
 
-<h2>Backend: Xine bug</h2>
-<p>First, check if your bug also happens in xine-ui, if this is the case, it is
-likely a bug in Xine. Check
-<a href="http://xinehq.de/index.php/bugs">the bug section on the Xine homepage</a>. When a crash occurs in xine-lib itself, please recompile xine-lib with debugging information (run <tt>make debug</tt> followed by <tt>make debug-install</tt> after having run the configure script) and provide a <a href="http://bugzilla.gnome.org/getting-traces.cgi">backtrace</a>. You will also want to check the <a href="http://xinehq.de/index.php/faq">xine FAQ</a>.</p>
-
 <h2>Totem bug</h2>
 <p>If you are convinced the problem is with Totem itself, you should first check the <a href="http://bugzilla.gnome.org/buglist.cgi?product=totem&amp;bug_status=NEW&amp;bug_status=REOPENED&amp;bug_status=ASSIGNED&amp;bug_status=UNCONFIRMED">bug list</a> if your
 bug isn't already reported. If you can't find your bug, go ahead and file it on the 
@@ -233,7 +219,6 @@ To have better debug-output, open a terminal and enter the following command.</p
 <p>Here you can find a collection of usefull links related to totem.</p>
 <ul>
   <li><a href="http://gstreamer.freedesktop.org">GStreamer</a> homepage</li>
-  <li><a href="http://xinehq.de/">xine</a> homepage</li>
   <li><a href="http://ios.free.fr/?page=projet&amp;quoi=1">Goom</a>: the default visual plugin used in Totem</li>
 
   <li><a href="http://en.wikipedia.org/wiki/Totem_%28media_player%29">Totem</a> on Wikipedia</li>
