@@ -1,3 +1,7 @@
+2009-09-07  Bastien Nocera  <hadess@hadess.net>
+
+	* projects.gnome.org/totem/index.html: Remove mentions of xine-lib
+
 2008-08-29  Bastien Nocera  <hadess@hadess.net>
 
 	* index.html: Add FAQ mentioned by Fred Crozat (Closes: #432546)
